[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "centralized-rate-limiter"
version = "0.1.11"
authors = [
    {name = "Jacopo Piccirillo", email = "jacopo.piccirillo@gmail.com"}
]
description = "Utility for handling rate limiting in a centralized manner"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.25.0",
    "ratelimit>=2.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23.0",
    "black>=22.0",
    "isort>=5.0",
    "pylint>=2.17.0",
    "pyupgrade>=3.3.0",
    "build>=0.10.0",
    "twine>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/waddafunk/CentralizedRateLimiter"
"Bug Tracker" = "https://github.com/waddafunk/CentralizedRateLimiter/issues"
Documentation = "https://github.com/waddafunk/CentralizedRateLimiter#readme"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=centralized_rate_limiter --cov-report=term-missing --cov-report=xml"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.coverage.run]
source = ["centralized_rate_limiter"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:"
]